# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "lustreiser"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Generate formally verified real-time embedded code via Lustre/Esterel synchronous reactive programming"
license-file = "LICENSE"
repository = "https://github.com/hyperpolymath/lustreiser"
keywords = ["lustre", "esterel", "embedded", "real-time", "safety"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "2"
handlebars = "6"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
